# arquitectura_software

./: README.md
behavior_arboles/: CMakeLists.txt  package.xml
behavior_arboles/behavior_arboles_xml/: arbol_1.xml
behavior_arboles/include/behavior_arboles/: Adelante.h  Giro.h
behavior_arboles/launch/: BumpAndGo_tree.launch
behavior_arboles/src/: main_arbol.cpp  main_tree.cpp
behavior_arboles/src/behavior_arboles/: Adelante.cpp  Giro.cpp
find_my_mates/: CMakeLists.txt  package.xml
find_my_mates/find_my_mates_xml/: find_my_mates.xml
find_my_mates/include/find_my_mates/: Buscar.h  Chivar.h  DialogInterface.h  Hablar.h  Navegar.h  Volver.h  buscar_persona.h
find_my_mates/launch/: findmymates.launch
find_my_mates/maps/: GrannieAnnie.pgm
find_my_mates/param/: costmap_common_params.yaml
find_my_mates/src/: main_findmymates.cpp
find_my_mates/src/find_my_mates/: Buscar.cpp  Chivar.cpp  DialogInterface.cpp  Hablar.cpp  Navegar.cpp  Volver.cpp  buscar_persona.cpp
lleva_mi_luggage/: CMakeLists.txt  package.xml
lleva_mi_luggage/include/lleva_mi_luggage/: Elegir.h  Seguir.h  Volver.h  buscar_objeto.h  navegacion.h
lleva_mi_luggage/launch/: luggage.launch  navegacionC.launch
lleva_mi_luggage/lleva_mi_luggage_xml/: luggage.xml
lleva_mi_luggage/src/: lleva_mi_luggage.cpp  main_luggage.cpp
lleva_mi_luggage/src/lleva_mi_luggage/: Elegir.cpp  Seguir.cpp  Volver.cpp  buscar_objeto.cpp  dialog.cpp  navegacion.cpp
navegacion/: CMakeLists.txt  package.xml
nodos_propios/: CMakeLists.txt  package.xml
nodos_propios/src/: nodo_forward_depende.cpp  nodo_forward_para.cpp  nodo_forward_rotaciones.cpp  nodo_laser.cpp  nodo_persona.cpp
proyecto_botella/: CMakeLists.txt  package.xml
proyecto_botella/launch/: darknetC.launch  navegacionC.launch
proyecto_botella/launch/includes/: move_base.launch.xml
proyecto_botella/maps/: map.pgm  map.yaml
proyecto_botella/src/: main.cpp  navegacion.cpp
